fix: 공사업체 초기정보등록에서 프로필사진 -> 소개 사진 리스트로 변경